--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -18,6 +21,7 @@
     "@types/react": "17.0.42",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "sass": "^1.50.0",
     "typescript": "4.6.2"
   }
 }
