--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "clsx": "^1.1.1",
+    "framer-motion": "^6.2.9",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
