--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "clsx": "^1.1.1",
+    "date-fns": "^2.28.0",
     "framer-motion": "^6.2.9",
     "next": "12.1.0",
     "react": "17.0.2",
