--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "clsx": "^1.1.1",
     "date-fns": "^2.28.0",
+    "formik": "^2.2.9",
     "framer-motion": "^6.2.9",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
