--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.9",
+    "is-hotkey": "^0.2.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "slate": "^0.77.0",
+    "slate-history": "^0.66.0",
+    "slate-react": "^0.77.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
