--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "slate": "^0.77.0",
     "slate-history": "^0.66.0",
     "slate-react": "^0.77.0",
+    "trumbowyg": "^2.25.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/react": "17.0.42",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "expose-loader": "^3.1.0",
     "sass": "^1.50.0",
     "typescript": "4.6.2"
   }
