--- a/package.json
+++ b/package.json
@@ -32,8 +32,16 @@
   "devDependencies": {
     "@types/node": "17.0.23",
     "@types/react": "17.0.42",
-    "eslint": "8.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-config-next": "12.1.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "expose-loader": "^3.1.0",
     "sass": "^1.50.0",
     "typescript": "4.6.2"
