--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,8 @@
     "node": {
       "tryExtensions": [".js", ".jsx", ".ts", ".tsx"]
     }
+  },
+  "rules": {
+    "@typescript-eslint/naming-convention": "warn"
   }
 }
