--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/html-to-text": "^8.1.0",
     "@types/node": "17.0.23",
     "@types/react": "17.0.42",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
@@ -43,6 +44,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "expose-loader": "^3.1.0",
+    "html-to-text": "^8.2.0",
     "sass": "^1.50.0",
     "typescript": "4.6.2"
   }
