--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
@@ -26,6 +27,7 @@
     "slate": "^0.77.0",
     "slate-history": "^0.66.0",
     "slate-react": "^0.77.0",
+    "swr": "^1.3.0",
     "trumbowyg": "^2.25.1",
     "use-http": "^1.0.26",
     "yup": "^0.32.11"
